cka/env-setup/task-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-prereq-host
  namespace: kube-system
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22.04
    command: ["sleep", "infinity"]
    securityContext:
      privileged: true
    volumeMounts:
    - name: host-modules
      mountPath: /lib/modules
    - name: host-sys
      mountPath: /sys
    - name: host-proc
      mountPath: /proc
  volumes:
  - name: host-modules
    hostPath:
      path: /lib/modules
  - name: host-sys
    hostPath:
      path: /sys
  - name: host-proc
    hostPath:
      path: /proc
